# scion-cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
cmake/: scion-config.cmake.in
include/scion/: constants.ipp  scion.hpp
include/scion/core/: arithmetic.hpp  core.hpp  traits.hpp  types.hpp
include/scion/prelude/: prelude.hpp  types.hpp
include/scion/util/: assert.hpp  log.hpp  util.hpp
scripts/: build.sh  config.sh  install.sh  test.sh
sources/scion/: scion.cpp
tests/: CMakeLists.txt
tests/hello-world/: CMakeLists.txt
tests/hello-world/sources/: main.cpp
